<resources>
    <string name="app_name">PDM_2021_II_P1_PROYECTO1</string>

    //menu principal

    <string name="ingresar_libros">Ingresar Libros</string>
    <string name="ingresar_alumnos">Ingresar Alumnos</string>
    <string name="ingresar_prestamo_de_libros">Ingresar Prestamo de Libros</string>
    <string name="libros_por_numeros_de_libro">Libros por Numero de Libro</string>
    <string name="libros_por_numero_de_cuenta">Libros por Numero de Cuenta</string>
    <string name="prestamos_por_numeros_de_libro">Prestamos por Numero de Libro</string>

    //acciones
    <string name="aceptar">Aceptar</string>
    <string name="atras">Atras</string>
    <string name="nombre_del_alumno">Nombre del Alumno</string>
    <string name="numero_de_cuenta">Numero de Cuenta</string>
    <string name="name">Name</string>
    <string name="carrera">Carrera</string>
    <string name="correo">Correo</string>
    <string name="fecha_de_ingreso">Fecha de Ingreso</string>
    <string name="autor">Autor</string>
    <string name="fecha_de_publicacion">Fecha de Publicacion</string>
    <string name="nombre_del_libro">Nombre del Libro</string>
    <string name="editorial">Editorial</string>
    <string name="numero_de_libro">Numero de Libro</string>
    <string name="buscar">Buscar</string>
    <string name="resultado">Resultado</string>
    <string name="cuenta">#Cuenta</string>


</resources>